#Any Major features, Minor Features, Bug fixes changes must be logged in acending order (add to the top) with the following template
#[Add/Change/Fix] - description of change 
#Who
#<empty line>
#

[Add] - Inital Files for first commit
Steven "Dreglor" Garcia
