@@ -1,0 +1,49 @@
+# configuration file generated by Bochs
+
+plugin_ctrl: unmapped=1, biosdev=1, speaker=1, extfpuirq=1, gameport=1, pci_ide=1
+memory: host=32, guest=32
+boot: floppy
+floppy_bootsig_check: disabled=0
+floppya: type=1_44, 1_44="floppy.img", status=inserted, write_protected=0
+# no floppyb
+ata0: enabled=1, ioaddr1=0x1f0, ioaddr2=0x3f0, irq=14
+ata1: enabled=1, ioaddr1=0x170, ioaddr2=0x370, irq=15
+ata2: enabled=0
+ata3: enabled=0
+parport1: enabled=1, file=""
+parport2: enabled=0
+com1: enabled=1, mode=null, dev=""
+com2: enabled=0
+com3: enabled=0
+com4: enabled=0
+usb_uhci: enabled=0
+usb_ohci: enabled=0
+i440fxsupport: enabled=1
+vga_update_interval: 50000
+vga: extension=vbe
+cpu: count=1, ips=4000000, reset_on_triple_fault=1, ignore_bad_msrs=1
+cpuid: stepping=3, vendor_string="GenuineIntel", brand_string="              Intel(R) Pentium(R) 4 CPU        "
+print_timestamps: enabled=0
+port_e9_hack: enabled=0
+text_snapshot_check: enabled=0
+private_colormap: enabled=0
+clock: sync=none, time0=local
+# no cmosimage
+ne2k: enabled=0
+pnic: enabled=0
+sb16: enabled=0
+# no loader
+log: sim.log
+logprefix: %t%e%d
+panic: action=ask
+error: action=report
+info: action=report
+debug: action=ignore
+pass: action=fatal
+keyboard_type: mf
+keyboard_serial_delay: 250
+keyboard_paste_delay: 100000
+keyboard_mapping: enabled=0, map=
+user_shortcut: keys=none
+mouse: enabled=0, type=ps2, toggle=ctrl+mbutton
+gdbstub: enabled=1, port=1234, text_base=0, data_base=0, bss_base=0
