@@ -1,0 +1,3 @@
+#! /bin/bash
+bochs-gdb -q -f config.bxrc &
+gdb
