@@ -7,3 +7,5 @@
 [Add] - Inital Files for first commit
 Steven "Dreglor" Garcia
 
+[Bootloader1] - Added a "do nothing" bootloader
+Steven "Dreglor" Garcia
